#ifndef IMAGE_MATCHER_H
#define IMAGE_MATCHER_H

#include "utils_block_max.h"
#include "match_params.h"
#include "match_object.h"
#include "match_group.h"
#include "edge_match_config.h"

#define SOURCE_THERSHOLD_TOLERANCE  (double)0.3

namespace mtc {

struct MatchResult {
    std::vector<MatchedObject> Objects;
    cv::Point  cropOffsetPoint;
    double     ExecutionTime{0.0};
    cv::Mat    Image;
    int        imageCols{0};
    int        imageRows{0};
    bool       isFoundMatchObject{false};
    int        totalPossiblePicking{0};
    bool       isAreaLessThanLimits{false};
};

// ---------------------------------------------------------------------------
// ImageMatcher — edge-based template matching engine.
//
// Algorithm config lives in each MatchPattern's MatchPatternConfig::typeConfig
// (EdgeMatchConfig).  Runtime search parameters (max_pos_num, max_overlap)
// are kept here as they govern the search over the whole image, not a single
// pattern.
// ---------------------------------------------------------------------------
class ImageMatcher {
public:
    ImageMatcher();

    MatchGroup* getPatternGroup();
    MatchGroup* getModel() { return &m_model_src; }

    int  getTemplateSourceSize();
    void setImageSource(std::string path);
    void setImageSource(cv::Mat img);
    void setMatchingROI(cv::Point tl, cv::Point br);

    void matching(cv::Mat& image, bool boundingBoxChecking, int objectsNum, bool usingRoi);
    void matching(bool boundingBoxChecking, int objectsNum, bool usingRoi);

    void setMatchSourceImage(cv::Mat& img);
    bool MatchEdge(cv::Mat& imgEdge, MatchPattern* pattern,
                   std::vector<MatchedObject>& matchObjs);

public:
    int    max_pos_num = 70;
    double max_overlap = 0.2;
    MatchResult match_result;

private:
    struct PossibleObject {
        int           conIndex;
        cv::Rect      conBoundingRect;
        cv::RotatedRect conMinRectArea;
        std::vector<int> modelCheckList;
    };

    // EdgeBased matching steps — cfg provides per-pattern algorithm settings
    bool MatchEdgePattern(cv::Mat& matSrc, MatchPattern* model,
                          cv::Mat& matResult, int layer, double minScore,
                          const EdgeMatchConfig& cfg);
    bool MatchEdgePattern_SIMD(cv::Mat& matSrc, MatchPattern* model,
                               cv::Mat& matResult, int layer, double minScore);

    cv::Size  GetBestRotationSize(cv::Size sizeSrc, cv::Size sizeDst, double rAngle);
    cv::Point2f ptRotatePt2f(cv::Point2f ptInput, cv::Point2f ptOrg, double angle);
    cv::Point GetNextMaxLoc(cv::Mat& matResult, cv::Point ptMaxLoc,
                            cv::Size sizeTemplate, double& maxValue, double maxOverlap);
    cv::Point GetNextMaxLoc(cv::Mat& matResult, cv::Point ptMaxLoc,
                            cv::Size sizeTemplate, double& maxValue,
                            double maxOverlap, BlockMax& blockMax);
    void GetRotatedROI(cv::Mat& matSrc, cv::Size size, cv::Point2f ptLT,
                       double dAngle, cv::Mat& matROI);
    bool SubPixEsimation(std::vector<MatchParams>* vec, double* dNewX,
                         double* dNewY, double* dNewAngle,
                         double dAngleStep, int iMaxScoreIndex);
    void FilterWithScore(std::vector<MatchParams>* vec, double dScore);
    void FilterWithRotatedRect(std::vector<MatchParams>* vec, int iMethod,
                               double dMaxOverLap,
                               std::vector<int>* del_indexes = nullptr);
    void SortPtWithCenter(std::vector<cv::Point2f>& vecSort);
    void DrawMatchResult(cv::Mat& drawImage,
                         std::vector<MatchedObject>& matchedResults);

private:
    cv::Mat    m_img_source;
    MatchGroup m_model_src;
    cv::Point  ROI_tl;
    cv::Point  ROI_br;

    std::vector<MatchParams> m_final_overlap_result;

    const double lowerThreshRatio = 1.0 - SOURCE_THERSHOLD_TOLERANCE;
    const double upperThreshRatio = 4.0 + SOURCE_THERSHOLD_TOLERANCE;
};

} // namespace mtc
#endif // IMAGE_MATCHER_H
