@startuml image_matching

skinparam backgroundColor #FAFAFA
skinparam classBackgroundColor #EBF3FB
skinparam classBorderColor #2E75B6
skinparam classHeaderBackgroundColor #3e6d99
skinparam classFontColor #FFFFFF
skinparam classAttributeFontColor #1F1F1F
skinparam arrowColor #1F4E79
skinparam packageBackgroundColor #F5F5F5
skinparam packageBorderColor #AAAAAA
skinparam shadowing false

package mtc {

    class ImageMatcher {
        + setMatchGroup(MatchGroup&) : void
        + Match() : MatchResult
    }

    class MatchGroup {
        + m_name : std::wstring
        + m_activeNumber : int
        + m_pickingBox : Size2f
        + m_pickingBoxDistance : double
        + m_pickinBoxAngle : double
    }

    class MatchPattern {
        + setEdgeProfile(EdgeProfile &) : void
        + learnPattern(std::wstring) : bool
        + learnPattern(cv::Mat &) : bool
        + learnPattern(void) : bool

        + d : MatchPatternData
    }

    class MatchPatternData {
        + m_patternName : std::wstring
        + m_patternIndex : int

        + m_rawImage : cv::Mat

        + m_minScore : double
        + m_angle : double
        + m_maxOverlap : double
        + m_toleranceAngle : double
        + m_minReduceLength : int
        + m_tSamples : int
        + m_isInvertBinaryThreshold : bool

        + m_pickPosition : cv::Point2f
        + m_pickingBoxSize : cv::Size2f
        + m_pickingBoxDistance : double

        + m_subPixelEstimation : bool 
        + m_StopLayer1 : bool
    }

    struct PatternPoint {
        + Coordinates : cv::Point
        + Derivative : cv::Point2f
        + Magnitude : float
    }

    class PatternLayer {
        + image : cv::Mat
        + patternPoints : vector<PatternPoint>
        + contours : vector<vector<cv::Point>>
        + hierachies : vector<cv::Vec4i>
        + Magnitude : cv::Mat
        + angle : cv::Mat
        .. point to aligned data for SIMD using ..
        + pGx : float*
        + pGy : float*
        + pMag : float*
    }
}

' Inheritance

' Enum usage

' Dependencies
MatchPattern ..> PatternLayer : return data

' --- Composition / Aggregation Relationships ---
MatchGroup *-- "1" MatchPattern : "contains multiple pattern"
MatchPattern *-- MatchPatternData : "contains"

PatternLayer *-- PatternPoint : "contains"
ImageMatcher <|-- MatchGroup : " match data"

@enduml